<resources>
    <string name="app_name">Easy Flights</string>
    <string name="mainFlightOrigin">Enter Origin</string>
    <string name="mainDestinationHint">Enter Destination</string>
    <string name="mainDateHint">Enter Date</string>
    <string name="mainSubmitButton">Search</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_results_Title">Search Results:</string>
    <string name="bookFlight">Book flight?</string>
    <string name="admin_add_a_user_button">Add a User</string>
    <string name="admin_view_user_list">View All Users</string>
    <string name="admin_menu_text">Admin Menu</string>
</resources>