<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenuActivity">

    <Button
        android:id="@+id/adminAddUser"
        android:layout_width="185dp"
        android:layout_height="74dp"
        android:text="@string/admin_add_a_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />


    <Button
        android:id="@+id/adminRemoveFlight"
        android:layout_width="185dp"
        android:layout_height="74dp"
        android:text="Remove a Flight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminAddUser"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/adminViewUsers"
        android:layout_width="185dp"
        android:layout_height="74dp"
        android:text="@string/admin_view_user_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminAddUser"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/adminAddFlight"
        android:layout_width="185dp"
        android:layout_height="74dp"
        android:text="Add a Flight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminViewUsers"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/adminMenu"
        android:layout_width="293dp"
        android:layout_height="131dp"
        android:gravity="center"
        android:text="@string/admin_menu_text"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/adminAddUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>